browser/themes/shared/incontentprefs/search.css
#
defaultEngine
>
.
menulist
-
label
-
box
>
.
menulist
-
icon
{
height
:
16px
;
}
.
searchengine
-
menuitem
>
.
menu
-
iconic
-
left
{
display
:
-
moz
-
box
;
}
#
engineList
{
margin
:
.
5em
6px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
image
(
engineShown
checked
)
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
check
.
svg
#
check
"
)
;
width
:
21px
;
height
:
21px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
image
(
engineShown
checked
selected
)
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
check
.
svg
#
check
-
inverted
"
)
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
image
(
engineName
)
{
-
moz
-
margin
-
end
:
10px
;
-
moz
-
margin
-
start
:
1px
;
width
:
16px
;
height
:
16px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
row
{
min
-
height
:
36px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
drop
-
feedback
{
background
-
color
:
Highlight
;
width
:
10000px
;
height
:
2px
;
-
moz
-
margin
-
start
:
0
;
}
#
engineShown
{
min
-
width
:
26px
;
}
#
addEnginesBox
{
margin
-
bottom
:
1em
;
}

