Bug 1126189 - In-content prefs: Fix alignment issues on Search tab. r=jaws
UltraBlame original commit: 3659d1dfa31e506a1c28e7fdd4b6b533d9547642

--- a/browser/themes/shared/incontentprefs/search.css
+++ b/browser/themes/shared/incontentprefs/search.css
@@ -1,5 +1,18 @@
 #
 defaultEngine
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+#
+defaultEngine
 >
 .
 menulist
@@ -45,7 +58,7 @@ margin
 :
 .
 5em
-6px
+0
 ;
 }
 #
@@ -268,5 +281,23 @@ margin
 bottom
 :
 1em
+;
+}
+#
+removeEngineButton
+#
+restoreDefaultSearchEngines
+{
+margin
+-
+right
+:
+0
+;
+margin
+-
+left
+:
+0
 ;
 }
